# actix-image-upload

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
example-usage/: base64.json  upload-from-web-browser.html  upload-json-base64-with-curl.sh  upload-json-url-with-curl.sh  upload-single-with-curl.sh  url.json
src/: imagetools.rs  lib.rs  main.rs
