[package]
name = "actix_image_upload"
version = "0.1.0"
authors = ["Anatolii Lishchynskyi <iamnotacake@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies.actix-rt]
version = "^1.1.1"

[dependencies.actix-web]
version = "^3.0.0-alpha.3"
default-features = false

[dependencies.actix-multipart]
version = "^0.3.0-alpha.1"

[dependencies.mime]
version = "^0.3.16"

[dependencies.tokio]
version = "^0.2.21"
features = ["blocking", "fs"]

[dependencies.rand]
version = "^0.7.3"

[dependencies.opencv]
version = "^0.43.1"
